--- a/geozilla/geozilla/geozilla.csproj
+++ b/geozilla/geozilla/geozilla.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="b3dm-tile" Version="1.1.2" />
+  </ItemGroup>
+
 </Project>
