import geozilla-core functions in geozilla-bl

--- a/geozilla/geozilla-core/geozilla-core.vcxproj.filters
+++ b/geozilla/geozilla-core/geozilla-core.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="Pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GeozillaCore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DllMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeozillaCore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
