--- a/geozilla/geozilla-bl/geozilla-bl.csproj
+++ b/geozilla/geozilla-bl/geozilla-bl.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>geozilla_bl</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
