--- a/geozilla/geozilla-core/geozilla-core.vcxproj
+++ b/geozilla/geozilla-core/geozilla-core.vcxproj
@@ -53,19 +53,19 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;GEOZILLACORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;GEOZILLACORE_EXPORTS;_WINDOWS;_USRDLL;_SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\cesium-native\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)Dependencies\cesium-native\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>Cesium3DTilesReaderd.lib;CesiumJsonReaderd.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Cesium3DTilesReaderd.lib;Cesium3DTilesContentd.lib;Cesium3DTilesd.lib;CesiumGltfContentd.lib;CesiumGeospatiald.lib;CesiumGeometryd.lib;CesiumGltfReaderd.lib;CesiumAsyncd.lib;CesiumJsonReaderd.lib;CesiumGltfd.lib;CesiumUtilityd.lib;s2geometryd.lib;sqlite3d.lib;async++d.lib;modp_b64d.lib;dracod.lib;ktxd.lib;webpdecoderd.lib;turbojpegd.lib;meshoptimizerd.lib;spdlogd.lib;uriparserd.lib;zlibstaticd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)Dependencies\cesium-native\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -75,13 +75,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;GEOZILLACORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;GEOZILLACORE_EXPORTS;_WINDOWS;_USRDLL;_SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\cesium-native\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)Dependencies\cesium-native\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -89,16 +89,26 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>Cesium3DTilesReader.lib;CesiumJsonReader.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Cesium3DTilesReader.lib;Cesium3DTilesContent.lib;Cesium3DTiles.lib;CesiumGltfContent.lib;CesiumGeospatial.lib;CesiumGeometry.lib;CesiumGltfReader.lib;CesiumAsync.lib;CesiumJsonReader.lib;CesiumGltf.lib;CesiumUtility.lib;s2geometry.lib;sqlite3.lib;async++.lib;modp_b64.lib;draco.lib;ktx.lib;webpdecoder.lib;turbojpeg.lib;meshoptimizer.lib;spdlog.lib;uriparser.lib;zlibstatic.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)Dependencies\cesium-native\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="GeozillaCore.h" />
+    <ClInclude Include="Loader\B3dmLoader.h" />
+    <ClInclude Include="Loader\GeoModelLoader.h" />
+    <ClInclude Include="Loader\GeoModelLoaderBase.h" />
+    <ClInclude Include="Loader\IGeoModelLoader.h" />
+    <ClInclude Include="Logger\ConsoleLogger.h" />
+    <ClInclude Include="Logger\ILogger.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="GeozillaCore.cpp" />
+    <ClCompile Include="Loader\B3dmLoader.cpp" />
+    <ClCompile Include="Loader\GeoModelLoader.cpp" />
+    <ClCompile Include="Loader\GeoModelLoaderBase.cpp" />
+    <ClCompile Include="Logger\ConsoleLogger.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
