--- a/geozilla/geozilla-core/geozilla-core.vcxproj.filters
+++ b/geozilla/geozilla-core/geozilla-core.vcxproj.filters
@@ -13,10 +13,40 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Loader">
+      <UniqueIdentifier>{39656f8d-0be9-4bb8-b148-b073a287ba46}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Logger">
+      <UniqueIdentifier>{b05f0ba8-3539-4cf9-aa96-61d6cb398cde}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Loader">
+      <UniqueIdentifier>{dc665ef3-e200-464b-afda-ed478192eeda}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Logger">
+      <UniqueIdentifier>{2636149d-74cb-4e09-a417-3c4e35c9aac5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeozillaCore.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Loader\GeoModelLoader.h">
+      <Filter>Header Files\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="Loader\IGeoModelLoader.h">
+      <Filter>Header Files\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger\ILogger.h">
+      <Filter>Header Files\Logger</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger\ConsoleLogger.h">
+      <Filter>Header Files\Logger</Filter>
+    </ClInclude>
+    <ClInclude Include="Loader\GeoModelLoaderBase.h">
+      <Filter>Header Files\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="Loader\B3dmLoader.h">
+      <Filter>Header Files\Loader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -25,6 +55,18 @@
     </ClCompile>
     <ClCompile Include="GeozillaCore.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Logger\ConsoleLogger.cpp">
+      <Filter>Source Files\Logger</Filter>
+    </ClCompile>
+    <ClCompile Include="Loader\GeoModelLoader.cpp">
+      <Filter>Source Files\Loader</Filter>
+    </ClCompile>
+    <ClCompile Include="Loader\GeoModelLoaderBase.cpp">
+      <Filter>Source Files\Loader</Filter>
+    </ClCompile>
+    <ClCompile Include="Loader\B3dmLoader.cpp">
+      <Filter>Source Files\Loader</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
