immport pcl library

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,6 @@
 [submodule "geozilla/gozilla-core/external/cesium-native"]
 	path = geozilla/gozilla-core/external/cesium-native
 	url = https://github.com/CesiumGS/cesium-native.git
-[submodule "geozilla/gozilla-core/external/pcl"]
-	path = geozilla/gozilla-core/external/pcl
-	url = https://github.com/PointCloudLibrary/pcl.git
-[submodule "geozilla/gozilla-core/external/eigen"]
-	path = geozilla/gozilla-core/external/eigen
-	url = https://gitlab.com/libeigen/eigen.git
-	branch = 3.3
+[submodule "geozilla/gozilla-core/external/vcpkg"]
+	path = geozilla/gozilla-core/external/vcpkg
+	url = https://github.com/microsoft/vcpkg.git
