--- a/geozilla/gozilla-core/external/CMakeLists.txt
+++ b/geozilla/gozilla-core/external/CMakeLists.txt
@@ -1,20 +1,18 @@
-function(set_folder_property DIR)
-    get_property(TARGETS DIRECTORY "${DIR}" PROPERTY BUILDSYSTEM_TARGETS)
+function(set_folder_property DIR FOLDER_NAME)
+    get_property(TARGETS DIRECTORY ${DIR} PROPERTY BUILDSYSTEM_TARGETS)
     foreach(TARGET_NAME IN LISTS TARGETS)
-        set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "External")
+        set_target_properties(${TARGET_NAME} PROPERTIES FOLDER ${FOLDER_NAME})
     endforeach()
 
-    get_property(SUBDIRS DIRECTORY "${DIR}" PROPERTY SUBDIRECTORIES)
+    get_property(SUBDIRS DIRECTORY ${DIR} PROPERTY SUBDIRECTORIES)
     foreach(SUBDIR IN LISTS SUBDIRS)
-        set_folder_property("${SUBDIR}")
+        set_folder_property(${SUBDIR} ${FOLDER_NAME})
     endforeach()
 endfunction()
 
-function(add_submodule DIR)
+function(add_external DIR)
     add_subdirectory(${DIR})
-    set_folder_property(${DIR})
+    set_folder_property(${DIR} "External")
 endfunction()
 
-add_submodule(cesium-native)
-add_submodule(eigen)
-add_submodule(pcl)
+add_external(cesium-native)
