add gltf to point cloud converter

--- a/geozilla/geozilla-core/source/CMakeLists.txt
+++ b/geozilla/geozilla-core/source/CMakeLists.txt
@@ -5,6 +5,8 @@ set(SOURCE_LIST
     DllMain.cpp
     GeozillaCore.h
     GeozillaCore.cpp
+    GltfToPointCloudConverter.h
+    GltfToPointCloudConverter.cpp
 
     # Logger
     Logger/ILogger.h
