fix problem with geozilla-core.dll

--- a/geozilla/geozilla-core/source/CMakeLists.txt
+++ b/geozilla/geozilla-core/source/CMakeLists.txt
@@ -35,7 +35,7 @@ add_definitions(${PCL_DEFINITIONS})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 20
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/$<CONFIG>/"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../geozilla-api/bin/x64/$<CONFIG>/net8.0"
 )
 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_LIST})
