--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea
-
+Temp/
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,csharp
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,csharp
 
